tests/miz/fail/parser/fail_parser_algorithm_control_flow_recovery_001.miz
definition
  algorithm Broken()
  do
    while thesis do
      break;
    end;
    if do
      continue;
    else
      break;
    end;
    for i = do
      break;
    end;
    match t do
      exhaustive;
    end;
  end;
end;
